2000-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	removed debug fprintf

	* fvwm/virtual.c (MapIt):
	* fvwm/events.c (HandleMapNotify):
	* fvwm/virtual.c (UnmapIt):
	fixed is_map_pending flag and reduced usage of it

	* fvwm/fvwm2.1 (Move):
 	finished man page entry

	* fvwm/move_resize.c (move_window_doit):
	new option 'pointer' to move command; inteded for use with FvwmPager

2000-01-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (PositiveWrite):
	fixed 'dying module' bug

2000-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapNotify):
	* fvwm/icons.c (Iconify):
	(DeIconify):
	* fvwm/window_flags.h:
	* fvwm/fvwm.h:
	fixed 'hollow' windows when iconifying thrice in a function

2000-01-26 olicha	<olivier.chapuis@free.fr>
	* fvwm/screen.h: a "-Wall" fix to BUSYCURSOR ifdef
	* libs/WinMagic.c: corrected a missprint

2000-01-25  Hippo

	* fvwm/fvwm.h: split into fvwm.h and externs.h for FvwmIdent
	* fvwm/*.c: added #include "externs.h"

2000-01-23  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/events.c (HandleMapRequestKeepRaised): Fix problem with
	windows retaining there iconification status across quit, restart.

2000-01-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: changed version to 2.3.14

	* libs/System.c (getFileStamp):
	-Wall fix

	* fvwm/borders.c (draw_frame_relief):
	fixed border drawing core dump on some systems

2000-01-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_style_and_decor):
	* fvwm/update.c (apply_window_updates):
	* fvwm/update.h (struct):
	* fvwm/style.c (check_window_style_change):
	fixed DecorateTransient/NakedTransient styles; also make them take
	effect without a recapture

2000-01-21  Chris Rankin  <rankinc@zipworld.com.au>

	* fvwm/fvwm.c:
	Changed SA_INTERRUPT to SA_RESTART

2000-01-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawBorder):
	removed fprintf

	* fvwm/borders.c (RedrawBorder):